# alienai

./: .gitignore  .npmrc  .vercel-deploy-bump.txt  ChangeCreateModal.tsx  MyFile.tsx  RaidClient.tsx  artifacts-actions.ts  build-errors.txt  build-log.txt  build-log2.txt  diag2.js  diag3.js  diag4.js  diag_host.js  diag_lock.js  diag_page.js  diag_scope.js  diagnose_fp.js  eslint.config.mjs  exports-audit-report.txt  find_epics.py  find_placeholders.js  fix-remaining.mjs  fix_fp_approved.js  fix_idx.js  fix_img.js  fix_lines.js  fix_lock_banner.js  fix_page.js  fix_placeholders.js  fix_root.js  next.config.ts  next.config.ts.bak  org-members-route.ts  org-scope-audit.txt  package-lock.json  package.json  patch-health-activefilter.patch  patch_fp.js  patch_fp.py  (+15 more)
eslint-rules/: no-unscoped-supabase-query.js
public/: manifest.json
public/.well-known/: security.txt
schemas/artifact-diff/: artifact-diff.v1.json
scripts/: pdf-puppeteer-setup.ps1  standardise-exports.ps1
src/: Root.tsx  middleware.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json  ~$uri.conf.json
src-tauri/src/: main.rs
src/Video/: AlienaPromoVideo.backup.tsx  AlienaPromoVideo.tsx
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx
src/components/: AppHeader.tsx  ArtifactBoard.tsx  AuthForm.tsx  ComplianceDashboard.tsx  GovernanceGraph.tsx  GovernanceIntelligenceSection.tsx  InviteSignupForm.tsx  MonthlyPlanningBoard.tsx  SettingsLayoutClient.tsx
src/hooks/: useChangeRequests.ts  useOrgFy.ts  useProjectRole.ts
supabase/: config.toml
(+958 files in other folders)
